--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2856,4 +2856,9 @@
          is installed. -->
     <bool name="config_permissionReviewRequired">false</bool>
 
+    <!-- The list of components which should be automatically disabled. -->
+    <string-array name="config_disabledComponents" translatable="false"></string-array>
+
+    <!-- The list of components which should be forced to be enabled. -->
+    <string-array name="config_forceEnabledComponents" translatable="false"></string-array>
 </resources>
