--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -113,7 +113,7 @@
 
     <!-- The default tiles to display in QuickSettings -->
     <string name="quick_settings_tiles_extra" translatable="false">
-        hotspot,inversion,saver,work,cast,night,heads_up,ambient_display
+        hotspot,inversion,saver,work,cast,night,heads_up,ambient_display,sync
     </string>
 
     <!-- The tiles to display in QuickSettings -->
