Add Ambient Display QS Tile longpress link to purenexus ambient display in settings
Change-Id: Icbdab9901e82b9deaf171afee0a6197f27e77110

--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -107,15 +107,13 @@
     </string>
 
     <!-- Tiles native to System UI. Order should match "quick_settings_tiles_default" -->
-<!--
     <string name="quick_settings_tiles_stock" translatable="false">
         wifi,cell,battery,dnd,flashlight,rotation,bt,airplane,location,hotspot,inversion,saver,work,cast,night
     </string>
--->
 
     <!-- The default tiles to display in QuickSettings -->
     <string name="quick_settings_tiles_extra" translatable="false">
-        hotspot,inversion,saver,work,cast,night,heads_up
+        hotspot,inversion,saver,work,cast,night,heads_up,ambient_display
     </string>
 
     <!-- The tiles to display in QuickSettings -->
