--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2216,7 +2216,10 @@
          on the current state of the device.
          Each item must be one of the following strings:
          "power" = Power off
+         "reboot" = Reboot
+         "screenshot" = Take screenshot
          "settings" = An action to launch settings
+         "lockdown" = An action to lock it down
          "airplane" = Airplane mode toggle
          "bugreport" = Take bug report, if available
          "silent" = silent mode
@@ -2225,9 +2228,13 @@
          -->
     <string-array translatable="false" name="config_globalActionsList">
         <item>power</item>
-        <item>restart</item>
-        <item>bugreport</item>
+        <item>reboot</item>
+        <item>screenshot</item>
+        <item>airplane</item>
+        <item>settings</item>
+        <item>lockdown</item>
         <item>users</item>
+        <item>silent</item>
     </string-array>
 
     <!-- Number of milliseconds to hold a wake lock to ensure that drawing is fully
