--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -55,4 +55,7 @@
     <java-symbol type="drawable" name="ic_lock_power_screenshot" />
     <java-symbol type="string" name="powermenu_screenshot" />
     <java-symbol type="drawable" name="ic_settings_powermenu" />
+
+    <!-- Screen Recording -->
+    <java-symbol type="bool" name="config_enableScreenrecordChord" />
 </resources>
