--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -58,4 +58,7 @@
 
     <!-- Screen Recording -->
     <java-symbol type="bool" name="config_enableScreenrecordChord" />
+
+    <java-symbol type="drawable" name="ic_lock_power_screenrecord" />
+    <java-symbol type="string" name="powermenu_screenrecord" />
 </resources>
