[QUICK SETTINGS] Add Caffeine QS Tile
Change-Id: I5d4aa97ae63fc0bcc40f0fa7d9305efbba091029

--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -38,6 +38,11 @@
     <!-- Brightness QS Tile -->
     <string name="quick_settings_brightness">Brightness</string>
 
+    <!-- Caffeine QS Tile -->
+    <string name="quick_settings_caffeine_label">Caffeine</string>
+    <string name="accessibility_quick_settings_caffeine_off">Caffeine off</string>
+    <string name="accessibility_quick_settings_caffeine_on">Caffeine on</string>
+
     <!-- NFC QS tile -->
     <string name="quick_settings_nfc_label">NFC</string>
     <string name="accessibility_quick_settings_nfc_off">NFC off.</string>
