Powermenu Torch option [1/2]
- Ported up by @Mazda-- from Lollipop
https://github.com/DirtyUnicorns/android_frameworks_base/commit/fd7707194c9fb760233759c69ec7966b62cdee9c

- Use CameraManager instead of TorchManager since we no longer use CM's torch fixes/implementation.

Credit to @beanstown106 for his commit here
https://github.com/DirtyUnicorns/android_frameworks_base/commit/49e3cd541f68b00c04b6dda03341c09ba9ba57f9

Change-Id: Ia837d353082ed96199c784a764f8d9d772ec8281

--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -61,4 +61,8 @@
 
     <java-symbol type="drawable" name="ic_lock_power_screenrecord" />
     <java-symbol type="string" name="powermenu_screenrecord" />
+
+    <!-- Powermenu Torch -->
+    <java-symbol type="drawable" name="ic_lock_torch" />
+    <java-symbol type="string" name="global_action_torch" />
 </resources>
