--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2219,6 +2219,7 @@
          "reboot" = Reboot
          "screenshot" = Take screenshot
          "screenrecord" = Take screen recording
+         "torch" = Toggle torch
          "settings" = An action to launch settings
          "lockdown" = An action to lock it down
          "airplane" = Airplane mode toggle
@@ -2232,6 +2233,7 @@
         <item>reboot</item>
         <item>screenshot</item>
         <item>screenrecord</item>
+        <item>torch</item>
         <item>airplane</item>
         <item>settings</item>
         <item>lockdown</item>
