--- a/packages/SystemUI/res/xml/tuner_prefs.xml
+++ b/packages/SystemUI/res/xml/tuner_prefs.xml
@@ -144,4 +144,10 @@
     <com.android.systemui.tuner.StatusBarSwitch
         android:key="vpn"
         android:title="@string/status_bar_vpn" />
+
+    <SwitchPreference
+        android:key="bluetooth_show_battery"
+        android:title="@string/bluetooth_battery_title"
+        android:summary="@string/bluetooth_battery_summary"
+        android:defaultValue="false" />
 </PreferenceScreen>
