--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -34,4 +34,9 @@
     <java-symbol type="drawable" name="ic_audio_notification_new" />
     <java-symbol type="drawable" name="ic_audio_notification_mute_new" />
     <java-symbol type="drawable" name="ic_audio_notification_mute_alpha" />
+
+    <!-- Button Brightness -->
+    <java-symbol type="integer" name="config_buttonBrightnessSettingMinimum" />
+    <java-symbol type="integer" name="config_buttonBrightnessSettingMaximum" />
+    <java-symbol type="integer" name="config_buttonBrightnessSettingDefault" /> 
 </resources>
