QS: Show # of clients connected to hotspot
Since we no longer post a notification showing that the wifi hotspot
is on and the # of connected clients, we now show the # of clients
connected in the label of the hotspot QS tile.

Change-Id: I9ed37b96db9b5b4320a7260524f69733ea70d030

HotSpot: Store # of connected clients in receiver

Get the number of connected clients in onReceive and cache the value
to be used in handleUpdateState.

Change-Id: I011a13e186c1fa9976df58a4ad1603e6c0cd6bbb

--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -88,4 +88,7 @@
     <java-symbol type="string" name="app_killed_message" />
     <java-symbol type="string" name="no_app_killed_message" />
     <java-symbol type="integer" name="config_backKillTimeout" />
+
+    <!-- config softap extention feature -->
+    <java-symbol type="bool" name="config_softap_extention" />
 </resources>
