--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -79,4 +79,5 @@
     <string name="qs_menu_item_columns_four">4</string>
     <string name="qs_menu_item_columns_five">5</string>
     <string name="qs_menu_item_reset">Reset</string>
+    <string name="qs_menu_item_titles">Hide labels</string>
 </resources>
