--- a/core/res/res/values/custom_config.xml
+++ b/core/res/res/values/custom_config.xml
@@ -19,4 +19,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Whether device has DASH charging support -->
     <bool name="config_hasDashCharger">false</bool>
+
+    <!-- sRGB sysfs path -->
+    <string name="config_srgb_path"></string>
 </resources>
