--- a/core/res/res/values/custom_config.xml
+++ b/core/res/res/values/custom_config.xml
@@ -80,4 +80,7 @@
     <!-- kill app long press back -->
     <integer name="config_backKillTimeout">1500</integer>
 
+    <!-- High Brightness Mode -->
+    <add-resource type="bool" name="config_supportHighBrightness"></add-resource>
+    <bool name="config_supportHighBrightness">false</bool>
 </resources>
