--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -91,4 +91,7 @@
 
     <!-- config softap extention feature -->
     <java-symbol type="bool" name="config_softap_extention" />
+
+    <!-- High Brightness Mode -->
+    <java-symbol type="bool" name="config_supportHighBrightness" />
 </resources>
