BatteryService: add dash charging support
Change-Id: I337feabf26ebdca100b651dcf492cc78b4fede74
Signed-off-by: thecrazyskull <anaskarbila@aospa.co>

--- a/core/res/res/values/custom_config.xml
+++ b/core/res/res/values/custom_config.xml
@@ -17,10 +17,6 @@
 */
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- Package Manager -->
-    <java-symbol type="array" name="config_disabledComponents" />
-    <java-symbol type="array" name="config_forceEnabledComponents" />
-
-    <!-- Whether device has dash charging support -->
-    <java-symbol type="bool" name="config_hasDashCharger" />
+    <!-- Whether device has DASH charging support -->
+    <bool name="config_hasDashCharger">false</bool>
 </resources>
