[2/2] frameworks_base: Longpress back to kill app
Longpress delay set to 1.5s / disabled by default

Squashed commit of :

Longpress back to kill app [1/2] (zephiK)

* kill app long press back -Rascarlo https://github.com/rascarlo/android_frameworks_base/commit/cc7cbd4c359bb88d0f482ca19b1c2285643cbe71

Google changed the location of PhoneWindowManager.java

Update longpress back to kill logic (dwitherell)

*Made some changes in how foreground app is determined - now uses UsageStats
*Edited methods so toast shows package name being killed

--- a/core/res/res/values/custom_config.xml
+++ b/core/res/res/values/custom_config.xml
@@ -76,4 +76,8 @@
 
     <!-- Internal default to navigation bar value -->
     <bool name="config_defaultToNavigationBar">true</bool>
+    
+    <!-- kill app long press back -->
+    <integer name="config_backKillTimeout">1500</integer>
+
 </resources>
