--- a/core/res/res/values/custom_strings.xml
+++ b/core/res/res/values/custom_strings.xml
@@ -56,4 +56,9 @@
 
     <!-- Powermenu Torch -->
     <string name="global_action_torch">Flashlight</string>
+
+    <!-- kill app long press back -->
+    <string name="app_killed_message"><xliff:g id="string">%s</xliff:g> killed</string>
+    <string name="no_app_killed_message">Nothing to kill</string>
+
 </resources>
