--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -83,4 +83,9 @@
 
     <!-- Internal default to navigation bar value -->
     <java-symbol type="bool" name="config_defaultToNavigationBar" />
+
+    <!-- Kill app long press back -->
+    <java-symbol type="string" name="app_killed_message" />
+    <java-symbol type="string" name="no_app_killed_message" />
+    <java-symbol type="integer" name="config_backKillTimeout" />
 </resources>
