--- a/packages/SystemUI/res/drawable/ic_battery_circle_frame.xml
+++ b/packages/SystemUI/res/drawable/ic_battery_circle_frame.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
     Copyright (C) 2016 The CyanogenMod Project
-    Copyright (C) 2016 The Paranoid Android Project
-
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
-
          http://www.apache.org/licenses/LICENSE-2.0
-
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -21,11 +17,12 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
 
-    <!-- Path will be tinted based on battery level -->
+    <!-- Path will be tinted based on light/dark modes -->
     <path
-        android:name="battery_level"
+        android:name="frame"
         android:strokeColor="#000000"
         android:strokeLineJoin="round"
         android:strokeWidth="3"
         android:pathData="@string/battery_circle_path" />
+
 </vector>
