--- a/packages/SystemUI/res/drawable/ic_battery_solid.xml
+++ b/packages/SystemUI/res/drawable/ic_battery_solid.xml
@@ -15,17 +15,19 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- Path will be tinted based on battery level -->
-    <path
-        android:name="battery_level"
-        android:strokeColor="#000000"
-        android:strokeLineJoin="round"
-        android:strokeWidth="3"
-        android:pathData="@string/battery_circle_path" />
-</vector>
+    <item
+        android:id="@+id/battery_frame"
+        android:top="1.5dp"
+        android:bottom="1.5dp"
+        android:start="1.5dp"
+        android:end="1.5dp">
+        <shape android:shape="oval"/>
+    </item>
+
+    <item
+        android:id="@+id/battery_fill"
+        android:drawable="@drawable/ic_battery_solid_avd"/>
+
+</layer-list>
