--- a/packages/SystemUI/res/drawable/ic_battery_solid_avd.xml
+++ b/packages/SystemUI/res/drawable/ic_battery_solid_avd.xml
@@ -15,17 +15,11 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+<animated-vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:drawable="@drawable/ic_battery_solid_fill" >
 
-    <!-- Path will be tinted based on battery level -->
-    <path
+    <target
         android:name="battery_level"
-        android:strokeColor="#000000"
-        android:strokeLineJoin="round"
-        android:strokeWidth="3"
-        android:pathData="@string/battery_circle_path" />
-</vector>
+        android:animation="@anim/battery_solid" />
+
+</animated-vector>
