--- a/packages/SystemUI/res/drawable/ic_battery_solid_fill.xml
+++ b/packages/SystemUI/res/drawable/ic_battery_solid_fill.xml
@@ -24,8 +24,6 @@
     <!-- Path will be tinted based on battery level -->
     <path
         android:name="battery_level"
-        android:strokeColor="#000000"
-        android:strokeLineJoin="round"
-        android:strokeWidth="3"
-        android:pathData="@string/battery_circle_path" />
+        android:fillColor="#000000"
+        android:pathData="@string/battery_solid_empty" />
 </vector>
