--- a/packages/SystemUI/res/values/pa_styles.xml
+++ b/packages/SystemUI/res/values/pa_styles.xml
@@ -27,5 +27,8 @@
 
     <!-- Battery meter drawable styles -->
     <style name="BatteryMeterViewDrawable.Portrait"/>
-    <style name="BatteryMeterViewDrawable.Circle"/>
+    <style name="BatteryMeterViewDrawable.Circle">
+        <item name="blendMode">overlay</item>
+    </style>
+    <style name="BatteryMeterViewDrawable.Solid"/>
 </resources>
