--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -29,4 +29,9 @@
 
     <!-- Whether device has dash charging support -->
     <java-symbol type="bool" name="config_hasDashCharger" />
+
+    <!-- Notifications -->
+    <java-symbol type="drawable" name="ic_audio_notification_new" />
+    <java-symbol type="drawable" name="ic_audio_notification_mute_new" />
+    <java-symbol type="drawable" name="ic_audio_notification_mute_alpha" />
 </resources>
