--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -324,7 +324,7 @@
     <!-- Maximum length of operator name to be shown in status bar  -->
     <integer name="config_operatorNameMaxLength">20</integer>
     <!-- show different network indicators -->
-    <bool name="show_network_indicators">false</bool>
+    <bool name="show_network_indicators">true</bool>
     <!-- Show roaming and network icons -->
     <bool name="show_roaming_and_network_icons">false</bool>
 
