--- a/packages/SystemUI/res/drawable/ic_qs_signal_h_plus.xml
+++ b/packages/SystemUI/res/drawable/ic_qs_signal_h_plus.xml
@@ -28,15 +28,14 @@
   IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="11dp"
-    android:height="9.9dp"
-    android:viewportWidth="30"
-    android:viewportHeight="27">
-
+        android:width="16.4dp"
+        android:height="32dp"
+        android:viewportWidth="16.4"
+        android:viewportHeight="32">
     <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M10.099,13.902H7.953V9.339H4.774v4.563H2.621V3.238h2.153v4.313h3.179V3.238h2.146V13.902z" />
+        android:fillColor="#FFFFFFFF"
+        android:pathData="M8,14.667H5.867V10h-3.6v4.667H0V3.333h2.267v4.933h3.6V3.333H8V14.667Z" />
     <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M18.684,7.645h2.969v1.734h-2.969v3.383h-1.845V9.379h-2.984V7.645h2.984V4.48h1.845V7.645z" />
+        android:fillColor="#FFFFFFFF"
+        android:pathData="M16.4,5.6h-2.267V3.333H12V5.6H9.733v2.133H12V10h2.133V7.733H16.4V5.6Z" />
 </vector>
