--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -150,4 +150,9 @@
 
     <!-- High Brightness Mode Tile -->
     <string name="quick_settings_high_brightness">High brightness</string>
+
+    <!-- Show lte/4g switch -->
+    <string name="show_lte_fourgee_title">Show 4G instead of LTE</string>
+    <string name="show_lte_fourgee_summary">Replaces LTE statusbar indicator with 4G</string>
+
 </resources>
