--- a/packages/SystemUI/res/xml/tuner_prefs.xml
+++ b/packages/SystemUI/res/xml/tuner_prefs.xml
@@ -22,6 +22,12 @@
         android:key="status_bar"
         android:title="@string/status_bar" >
 
+		<SwitchPreference
+        android:key="show_lte_fourgee"
+        android:title="@string/show_lte_fourgee_title"
+        android:summary="@string/show_lte_fourgee_summary"
+		android:defaultValue="false" />
+
         <com.android.systemui.tuner.StatusBarSwitch
             android:key="rotate"
             android:title="@string/status_bar_settings_auto_rotation" />
