--- a/packages/SystemUI/res/xml/tuner_prefs.xml
+++ b/packages/SystemUI/res/xml/tuner_prefs.xml
@@ -22,6 +22,16 @@
         android:key="status_bar"
         android:title="@string/status_bar" >
 
+        <SwitchPreference
+            android:key="show_fourg"
+            android:title="@string/show_fourg_title"
+            android:summary="@string/show_fourg_summary"
+            android:defaultValue="false" />
+
+        <PreferenceCategory
+            android:key="hide_statusbar_items"
+            android:title="@string/statusbar_tuner_category_title">
+
         <com.android.systemui.tuner.StatusBarSwitch
             android:key="rotate"
             android:title="@string/status_bar_settings_auto_rotation" />
@@ -96,6 +106,8 @@
             android:title="@string/tuner_time"
             android:summary="%s"
             android:entries="@array/clock_options" />
+
+        </PreferenceCategory>
 
     </PreferenceScreen>
 
